refactors plugin and breaks workflow into several subtasks